# flix-api

./: .coveragerc  .dockerignore  .env.example  .env_dist  .flake8  .gitignore  .pass  .pre-commit-config.yaml  Dockerfile  Dockerfile.celery  Dockerfile.dev  Makefile  Makefile.dev  README.md  README_ptBR.md  conftest.py  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: docker-image-release.yml  github-actions-demo.yml  github-actions-with-docker-compose.yml  github-actions-with-dockercompose.yml  publish.yml  push.yml  quality-assurance.yml
actors/: admin.py  models.py  test.py  urls.py  views.py
actors/management/commands/: import_actors.py
actors/migrations/: 0001_initial.py  0002_remove_actor_id_actor_created_at_actor_created_by_and_more.py  0003_alter_actor_uuid.py
actors/services/: import_service.py
actors/tests/: factories.py  test_import_service.py  test_models.py  test_serializers.py  test_views.py
app/: celery.py  decorators.py  pagination.py  permissions.py  settings.py  test_settings.py  tests.py  tests_permissions.py  urls.py  urls_notes.txt
apps/actors/: admin.py  models.py  serializers.py  urls.py  views.py
apps/actors/migrations/: 0001_initial.py
apps/actors/services/: import_service.py
apps/actors/tests/: factories.py  test_import_service.py  test_models.py  test_serializers.py  test_views.py
apps/authentication/tests/: test_views.py
apps/core/: constants.py  views.py
apps/genres/: admin.py  models.py  serializers.py  urls.py  views.py
apps/genres/migrations/: 0001_initial.py
apps/genres/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
apps/logs/: handlers.py
apps/movies/: admin.py  models.py  serializers.py  urls.py  views.py
apps/movies/mixins/: audit_entity_mixin.py  movie_suggestor_description_mixin.py
apps/movies/services/: import_service.py  movie_suggestor_description_service.py  stats_service.py
apps/movies/tests/: factories.py  test_import_service.py  test_models.py  test_movie_suggestor_description_service.py  test_stats_service.py  test_views.py
apps/reviews/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/reviews/tests/: factories.py  test_views.py
authentication/: urls.py
authentication/tests/: factories.py  test_views.py
collection/: thunder-collection_postman_Flix API.json
core/: models.py
file_templates/: actors_import.csv  movies_import.csv
genres/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
genres/migrations/: 0001_initial.py  0002_remove_genre_id_genre_created_at_genre_created_by_and_more.py  0003_alter_genre_uuid.py
genres/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
infrastructure/: Dockerfile  Dockerfile.celery  docker-compose.yml  entrypoint_celery.sh
instructions/import_csv/: actors.md  movies.md
movies/: admin.py  factories.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_remove_movie_id_movie_created_at_movie_created_by_and_more.py  0003_fix_movie_actors_manytomany_table.py  0004_alter_movie_uuid.py
movies/mixins/: movie_suggestor_description_mixin.py
movies/services/: import_service.py  movie_suggestor_description_service.py  stats.py  stats_service.py
movies/tests/: factories.py  test_import_service.py  test_models.py  test_movie_suggestor_description_service.py  test_serializers.py  test_stats_service.py  test_views.py
reviews/: admin.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_remove_review_id_review_created_at_review_created_by_and_more.py  0003_alter_review_uuid.py
reviews/services/: review_email_notification_service.py
reviews/tests/: factories.py  test_views.py
(+18 files in other folders)
