[tool.poetry]
name = "flix-api"
version = "0.1.0"
description = "Projeto do curso Django Master para aprendizagem de desenvolvimento de APIs"
authors = ["WillamesCampos <willwjccampos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.1"
djangorestframework = "^3.16.0"
psycopg = "^3.2.9"
python-dotenv = "^1.1.0"
djangorestframework-simplejwt = "^5.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
