[tool.poetry]
name = "flix-api"
version = "0.1.0"
description = "Projeto do curso Django Master para aprendizagem de desenvolvimento de APIs"
authors = ["WillamesCampos <willwjccampos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.1"
djangorestframework = "^3.16.0"
python-dotenv = "^1.1.0"
djangorestframework-simplejwt = "^5.5.0"
psycopg2-binary = "^2.9.10"


[tool.poetry.group.group_dev.dependencies]
flake8 = "^7.2.0"
factory-boy = "^3.3.3"
faker = "^37.4.0"
pytest = "^8.4.1"
pytest-django = "^4.11.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
